--- a/src/components/footer/footerStyles.css
+++ b/src/components/footer/footerStyles.css
@@ -1,12 +1,21 @@
-
+body {
+	zoom: -1;
+}
 
 div {
 	width: 100%;
 	height:50px;
-	background: ghostwhite;
+	background: #262525;
 	position:fixed;
 	bottom: 0;
 	left:0;
+	border-top: 0.5px solid #98B4D4;
+	
+	
+}
+
+h3 {
+	color:azure;
 	text-align: center;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
